src/objects/Field_Inventory_Tracking_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores configurable settings used in the Field Inventory Tracking app</description>
    <fields>
        <fullName>FIT_Account_Typeahead_Field_1__c</fullName>
        <label>FIT Account Typeahead Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Account_Typeahead_Field_2__c</fullName>
        <label>FIT Account Typeahead Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Account_Typeahead_Field_3__c</fullName>
        <label>FIT Account Typeahead Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Account_Typeahead_Record_Limit__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Controls the number of results returned on Account Typeahead component</description>
        <label>FIT Account Typeahead Record Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIT_Consignment_Request_Item_RecTypeID__c</fullName>
        <description>This is the Record Type ID for Consignment Request for the Transaction Items object</description>
        <label>FIT Consignment Request Item RecTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Consignment_Request_Record_Type_ID__c</fullName>
        <description>This is the Record Type ID for Consignment Request for the Transactions object</description>
        <label>FIT Consignment Request Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Inventory_Transfer_Item_RecTypeID__c</fullName>
        <description>This is the Record Type ID for Inventory Transfer for the Transaction Items object</description>
        <label>FIT Inventory Transfer Item RecTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Inventory_Transfer_Record_Type_ID__c</fullName>
        <description>This is the Record Type ID for Inventory Transfer for the Transactions object</description>
        <label>FIT Inventory Transfer Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Inventory_Typeahead_Field_1__c</fullName>
        <label>FIT Inventory Typeahead Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Inventory_Typeahead_Field_2__c</fullName>
        <label>FIT Inventory Typeahead Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Inventory_Typeahead_Field_3__c</fullName>
        <label>FIT Inventory Typeahead Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Inventory_Typeahead_Order_By_Field__c</fullName>
        <description>Field that determines ordering of results for Inventory typeahead component</description>
        <label>FIT Inventory Typeahead Order By Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Inventory_Typeahead_Record_Limit__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Controls the number of results returned on Inventory Typeahead component</description>
        <label>FIT Inventory Typeahead Record Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIT_Pic2Shop_Callback_URL__c</fullName>
        <description>The callback URL passed to Pic2Shop mobile app, where it will redirect the user after obtaining the bar code.</description>
        <label>FIT Pic2Shop Callback URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Product_Typeahead_Field_1__c</fullName>
        <label>FIT Product Typeahead Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Product_Typeahead_Field_2__c</fullName>
        <label>FIT Product Typeahead Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Product_Typeahead_Field_3__c</fullName>
        <label>FIT Product Typeahead Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Product_Typeahead_Record_Limit__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Controls the number of results returned on Product Typeahead component</description>
        <label>FIT Product Typeahead Record Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIT_Sales_Order_Item_RecTypeID__c</fullName>
        <description>This is the Record Type ID for Sales Order for the Transaction Items object</description>
        <label>FIT Sales Order Item RecTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Sales_Order_Record_Type_ID__c</fullName>
        <description>This is the Record Type ID for Sales Order for the Transactions object</description>
        <label>FIT Sales Order Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Ship_To_Address_Typeahead_Field_1__c</fullName>
        <label>FIT Ship To Address Typeahead Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Ship_To_Address_Typeahead_Field_2__c</fullName>
        <label>FIT Ship To Address Typeahead Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Ship_To_Address_Typeahead_Field_3__c</fullName>
        <label>FIT Ship To Address Typeahead Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_Ship_To_Address_Typeahead_Rec_Limit__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Controls the number of results returned on Shipping To Typeahead component</description>
        <label>FIT Ship To Address Typeahead Rec Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIT_User_Typeahead_Field_1__c</fullName>
        <label>FIT User Typeahead Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIT_User_Typeahead_Record_Limit__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Controls the number of results returned on User Typeahead component</description>
        <label>FIT User Typeahead Record Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Field Inventory Tracking Settings</label>
</CustomObject>